course detail pg designing

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.5",
+    "@vidstack/react": "^1.12.13",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-class-names": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
