--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-class-names": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
